<resources>
    <string name="app_name">My Weather App</string>
    <string name="city_name">St. Paul, MN</string>
    <string name="feels_like_temp">Feels like %d°</string>
    <string name="low_temp">Low %d°</string>
    <string name="high_temp">High %d°</string>
    <string name="humidity">Humidity %d%%</string>
    <string name="pressure">Pressure %d hPa</string>
    <string name="forecast">Forecast</string>
    <string name="forecast_title">Forecast</string>
    <string name="forecast_current_temp">Temp: %d°</string>
    <string name="forecast_high_temp">High: %d°</string>
    <string name="forecast_low_temp">Low: %d°</string>
    <string name="forecast_sunrise">Sunrise: %s</string>
    <string name="forecast_sunset">Sunset: %s</string>
    <string name="temperature">%s°</string>
    <string name="get_weather_for_my_location">Get Weather For My Location</string>
</resources>